Fix mouse handling issue in modal popup

The modal popup block input for the condition as specified in the
patchset 3326439361d3ec4e60bcdb189e6bfb75189136ca. But this blocks input
to the popup itself via ancestor validation.

This patchset fix the issue by avoiding ancestor validation if its same
item.

Fixes: QTBUG-113853
Change-Id: Icb3c04861396883c2969374fc5f7b8beb76ccdb9
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit dc30e3859f4df146a675c367162720eae8d91982)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>